# logic_tracer

./: .gitignore  Cargo.toml  README  README.md  some.md
examples/: README.md  ast_tester.rs  lexer_tester.rs  main_tester.rs  parse_propositions.rs  prop_tester.rs  term_matching.rs
examples/ast/: main.rs
examples/k_map/: main.rs
examples/logic_op/: main.rs
examples/parser/: main.rs
examples/regex/: main.rs
examples/shuting_yard/: main.rs
examples/truth_table/: main.rs
log/: cargo.md
resources/log/: neo_grammar.md  proposition.md  regex.md
src/: error.rs  gates.rs  lib.rs  main.rs  proposition.rs
src/circuits/: circuit.rs  combinational.rs  mod.rs  sequential.rs
src/components/: alphabet.rs  ast.rs  grammar.rs  lexer.rs  mod.rs  neo_grammar.rs  number.rs  numbers.rs  operators.rs  parser.rs  proposition.rs  token.rs
src/components/tokens/: mod.rs  operators.rs  variables.rs
src/config/: globals.rs  mod.rs
src/digital/: combinational.rs  mod.rs  sequential.rs
src/proto/: base_change.rs  encryption.rs  hashing.rs  logic_notation.rs  mod.rs  prototype.md
src/tracer/: ast.rs  lexer.rs  mod.rs  parser.rs
src/tracer/tokens/: mod.rs  numbers.rs  operators.rs  variables.rs
src/util/: files.rs  mod.rs  terminal.rs
