[package]
name = "logic_tracer"
# Check Semantic versioning (https://semver.org/)
version = "0.0.11-alpha-0"  # major.minor.patch-pre-release  # 0.0.0-alpha-0
edition = "2021"
repository = "https://github.com/Yrrrrrf/logic_tracer"
description = "Recognize a logic proposition and trace its truth value, also generate a truth table (still in development)"
authors = ["Yrrrrrf"]
license = "MIT"
readme = "README.md"
keywords = ["logic", "proposition", "truth_table", "calculator", "compiler"]
categories = ["logic", "proposition", "truth_table", "calculator", "compiler"]

exclude = [  # Exclude these files from the package
    ".vscode*",  # editor config
    "resources/*",  # data files (csv, json, etc)
    "target/",  # build directory (compiled code)
    "Cargo.lock",  # lock file (dependency versions)
]


# COMPILE OPTIMIZATION ------------------------------------------------------------------------
# where 1 is the lowest and 3 is the highest level of optimization

[profile.dev]
opt-level = 0  # no optimizations (fastest compile time, slowest runtime)

[profile.dev.package."*"]
opt-level = 3  # Optimize the dependencies at the highest level
# Slower first build, but faster subsequent builds

[profile.release]
opt-level = 3  # full optimizations (slowest compile time, fastest runtime)
lto = true  # link-time optimizations (slower compile time, faster runtime)
# the link-time optimizations means that the compiler will optimize the code
# across the whole program, not just the current crate


# DEPENDENCIES --------------------------------------------------------------------------------

[dependencies]
log = "0.4.*"  # Logging (https://docs.rs/log/latest/log/)
dev_utils = "0.0.*"  # Development utilities (https://docs.rs/dev_utils/latest/dev_utils/)
# dev_utils = { path = "./../dev_utils/dev_utils" }  // local path (src code...)

[dev-dependencies]
pest = "*"  # Parser (https://docs.rs/pest/latest/pest/)
regex = "*"  # Regular expressions (https://docs.rs/regex/latest/regex/)


[features]
default = []  # no features enabled by default

# Features are a way to enable or disable parts of your library
combinational = []  # combinational logic stuff (gates, multiplexers, decoders, etc)
sequential = []  # sequential logic stuff (flip-flops, registers, counters, etc)
digital = [
    "combinational",
    "sequential",
]  # digital logic stuff (combinational + sequential)

full = [
    "digital",
    # "other_feature",
]  # all features enabled
